# SuiteSparse

./: .clang-format  .flake8  .gitignore  .jscpd.json  .mypy.ini  CMakeLists.txt  README.md  _amd.c  demo.py  pyproject.toml  setup.py
.github/workflows/: lint.yml  python-publish.yml  tests.yml  wheels.yml
src/: _amd.c
src/suitesparse_amd/: _amd.c  _amd.pyi.py  amd.py
super-linter-output/: super-linter-summary.md
tests/: A.csv  P.csv  TestAMD.py  test_amd.py
