[project]
name = "suitesparse-amd"
version = "0.1.0"
description = "A Python wrapper for the C-Library for SuiteSparse's Approximate Minimum Degree (AMD) algorithm"
requires-python = ">=3.9"
dependencies = []
authors = [
    { name = "Marius Juston", email = "marius.juston@hotmail.fr" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Marius-Juston/SuiteSparse"
Issues = "https://github.com/Marius-Juston/SuiteSparse/issues"


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"